# bq2dbx-migrator

./: .env  .gitignore  README.md  app.py  pyproject.toml  start-app.bat  start-servers.ps1
bq2dbx/converter/: mapping_rules.yaml  sql_converter.py
templates/: upload.html
