[project]
name = "bq2dbx-migrator"
version = "0.1.0"
description = "Tool for converting BigQuery SQL to Databricks SQL with testing support"
authors = [
    {name = "Anmol Hans",email = "a.hans@syrencloud.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlglot (>=27.19.0,<28.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"